hw06/test/zm-hw6-classFun-override-MismatchParam-class7-upcasting-not-allowed.fmj
public int main() { }

public class C0  {
    public class C0 id(int a, float b, int [] c, float [] d, class C0 e, class C1 f){
        return new C0();
    }
}

public class C1 extends C0{
    public class C0 id(int a, float b, int [] c, float [] d, class C1 e, class C1 f){ // error: class C1 e不匹配(不允许upcasting)
        return new C0();
    }
}
